--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,6 @@
 /* Your app custom styles here */
 
-.searchbar-backdrop-in {    /* Override default F7 searchbar backdrop (it's ugly for us) */
-    opacity: 0 !important;
+.searchbar-backdrop-in {
+	/* Override default F7 searchbar backdrop (it's ugly for us) */
+	opacity: 0 !important;
 }
