--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,7 +2,8 @@
 
 .page-content {
 	/* Avoid horizontal scroll */
-	overflow-y: scroll; overflow-x: hidden;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .searchbar-backdrop-in {
